--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="en" class="dark">
 	<head>
+		<!-- Embed Card Details -->
 		<meta content="Candy Cat Portfolio" property="og:title" />
 		<meta content="A website to show i exsist." property="og:description" />
 		<meta content="https://i.imgur.com/kx1TaC9.png" property="og:image" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:image" content="https://i.imgur.com/kx1TaC9.png" />
 		<meta content="#7b1cff" data-react-helmet="true" name="theme-color" />
+
 		<meta charset="utf-8" />
-		<link rel="icon" href="https://i.imgur.com/3okxxI6.png" />
+		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Candy Cat</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
