Google SEO Verification.

--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en" class="dark">
 	<head>
 		<meta charset="utf-8" />
+		<meta name="google-site-verification" content="__dw2heDLeaBDZU0ioFkisRpRqtq_56e59o0p8_L5bI" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Candy Cat</title>
